src/tests/fixtures/generics/scalarPassedAsGenericArg.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Wrapper<T> = {
  /** @gqlField */
  value: T;
};

/** @gqlType */
type OtherType = {
  /** @gqlField */
  wrapper: Wrapper<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/scalarPassedAsGenericArg.ts:10:20 - error: Invalid type passed as a generic argument to a GraphQL type.

10   wrapper: Wrapper<string>;
                      ~~~~~~
